# libexpidus

./: .gitignore  .metadata  README.md  flake.nix  meson.build  meson_options.txt  overlay.nix  pubspec.yaml  shell.nix
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/expidusos/expidus/: ExpidusPlugin.kt
android/src/test/kotlin/com/expidusos/expidus/: ExpidusPluginTest.kt
docs/: manual.xml  meson.build  version.xml.in
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/expidusos/expidus_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/views/: clamp.dart  lists.dart  nav_view.dart  view_switcher.dart  welcome.dart
example/linux/: CMakeLists.txt
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
include/expidus/: config-parser.h  vendor-config.h
ios/: expidus.podspec
ios/Classes/: ExpidusPlugin.swift
lib/: expidus.dart
lib/src/: app.dart  logic.dart  scaffold.dart  theme.dart  widgets.dart
lib/src/logic/: layering.dart  method_channel.dart
lib/src/widgets/: app.dart  button.dart  dialog.dart  digital_clock.dart  dispatch_nav_observer.dart  flap.dart  headerbar.dart  input_shape_region.dart  scaffold.dart  sidebar.dart  theme.dart
linux/: CMakeLists.txt  app.cc  expidus_plugin.cc  expidus_plugin_private.h  win.cc
linux/include/expidus/: app.h  expidus_plugin.h  monitor.h  win.h
linux/plugin/: monitor-private.h  monitor.c  wayland.c  wayland.h
linux/test/: expidus_plugin_test.cc
macos/: expidus.podspec
macos/Classes/: ExpidusPlugin.swift
src/: build.h.in
src/config/: parser-priv.h  parser.c  vendor.c
test/: expidus_method_channel_test.dart  expidus_test.dart
windows/: CMakeLists.txt  expidus_plugin.cpp  expidus_plugin.h  expidus_plugin_c_api.cpp
windows/include/expidus/: expidus_plugin_c_api.h
windows/test/: expidus_plugin_test.cpp
